Always show the title

--- a/src/components/ProjectListing/ProjectListing.module.scss
+++ b/src/components/ProjectListing/ProjectListing.module.scss
@@ -37,7 +37,7 @@
         color: #fff;
         height: 100%;
         left: 0;
-        opacity: 0;
+        opacity: 0.75;
         padding: 2rem;
         position: absolute;
         top: 0;
@@ -72,4 +72,10 @@
     top: 0;
     width: 100%;
     z-index: -1;
+    opacity: 0;
+    &:hover {
+        color: #fff;
+        opacity: 0.8;
+        text-decoration: none;
+    }
 }
