--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -35,7 +35,11 @@
 .name {
     h3 {
         font-size: 23px !important;
-        margin-bottom: 0 !important;
+        margin-bottom: 5px !important;
+    }
+    h4 {
+        font-size: 16px;
+        color: gray;
     }
     a {
         &:hover,
